k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gamestore
  labels:
    name: gamestore
    app.kubernetes.io/part-of: gamestore
